<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".telaJogosTarefas"
    android:background="@drawable/fundo">

    <Button
        android:id="@+id/btnVoltarJT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/voltarJ"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="#0D9185"
        app:fontFamily="@font/lastingsketch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageButton
        android:id="@+id/imBtVelha"
        android:layout_width="107dp"
        android:layout_height="106dp"
        android:layout_marginTop="72dp"
        android:background="@null"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.753"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/jogodavelha"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imBtnmMemoria"
        android:layout_width="107dp"
        android:layout_height="106dp"
        android:layout_marginTop="72dp"
        android:background="@null"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/jogodamemoria"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Jdv"
        android:textColor="#000"
        android:textSize="20sp"
        app:fontFamily="@font/lastingsketch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imBtVelha" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/Jogos"
        android:textColor="#000"
        android:textSize="28sp"
        app:fontFamily="@font/lastingsketch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPalavras" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/jdm"
        android:textColor="#000"
        android:textSize="20sp"
        app:fontFamily="@font/lastingsketch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imBtnmMemoria" />

    <ImageButton
        android:id="@+id/imBtFrases"
        android:layout_width="107dp"
        android:layout_height="106dp"
        android:layout_marginTop="60dp"
        android:background="@null"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/letras"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tarefas"
        android:textColor="#000"
        android:textSize="28sp"
        app:fontFamily="@font/lastingsketch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.031" />

    <ImageButton
        android:id="@+id/imgBtNumeros"
        android:layout_width="107dp"
        android:layout_height="106dp"
        android:layout_marginTop="60dp"
        android:background="@null"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/numeros"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txtPalavras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/frases"
        android:textColor="#000"
        android:textSize="20sp"
        app:fontFamily="@font/lastingsketch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.778"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imBtFrases" />

    <TextView
        android:id="@+id/txtNum"
        android:layout_width="173dp"
        android:layout_height="19dp"
        android:layout_marginTop="24dp"
        android:text="@string/numeros"
        android:textColor="#000"
        android:textSize="20sp"
        app:fontFamily="@font/lastingsketch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBtNumeros" />

    <ImageButton
        android:id="@+id/imgBmenu"
        android:layout_width="89dp"
        android:layout_height="85dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="29dp"
        android:background="@null"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/imBtFrases"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/menu1" />

</androidx.constraintlayout.widget.ConstraintLayout>