<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".numeros"
    android:background="@drawable/fundo">

    <ImageView
        android:id="@+id/imgErrada4"
        android:layout_width="93dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgErrada"
        app:srcCompat="@drawable/imagem2" />

    <ImageView
        android:id="@+id/imgErrada3"
        android:layout_width="93dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgErrada2"
        app:srcCompat="@drawable/imagem3" />

    <ImageView
        android:id="@+id/imgCorreta2"
        android:layout_width="93dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgErrada3"
        app:srcCompat="@drawable/imagem6" />

    <ImageView
        android:id="@+id/imgErrada"
        android:layout_width="93dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCorreta"
        app:srcCompat="@drawable/imagem5" />

    <ImageView
        android:id="@+id/imgCorreta"
        android:layout_width="93dp"
        android:layout_height="150dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toStartOf="@+id/imgErrada2"
        app:layout_constraintHorizontal_bias="0.248"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:srcCompat="@drawable/imagem1" />

    <ImageView
        android:id="@+id/imgErrada2"
        android:layout_width="93dp"
        android:layout_height="150dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:srcCompat="@drawable/imagem4" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/titulo"
        android:textSize="23sp"
        android:textColor="#000"
        app:fontFamily="@font/lastingsketch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnVoltarTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/botao6"
        android:textSize="20sp"
        app:backgroundTint="#0D9185"
        app:fontFamily="@font/lastingsketch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgErrada4" />

    <Button
        android:id="@+id/btnFinalizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/fin"
        android:textSize="20sp"
        app:backgroundTint="#0D9185"
        app:fontFamily="@font/lastingsketch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCorreta2" />

</androidx.constraintlayout.widget.ConstraintLayout>