<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tarefaFrases"
    android:background="@drawable/fundo">

    <EditText
        android:id="@+id/edtCama"
        android:layout_width="220dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:textSize="20sp"
        android:hint="Digite o nome do objeto"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/edtBanana" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicio"
        app:fontFamily="@font/lastingsketch"
        android:textSize="20sp"
        android:textColor="#000"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="99dp"
        android:layout_height="95dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:srcCompat="@drawable/dado" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="99dp"
        android:layout_height="95dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:srcCompat="@drawable/aviao" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="99dp"
        android:layout_height="95dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/bananatf" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="99dp"
        android:layout_height="95dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/cama" />

    <Button
        android:id="@+id/btnLimpar"
        android:layout_width="128dp"
        android:layout_height="51dp"
        android:layout_marginTop="4dp"
        android:text="@string/limpar"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="#0D9185"
        app:fontFamily="@font/lastingsketch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/btnConferir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/conf"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="#0D9185"
        app:fontFamily="@font/lastingsketch"
        app:layout_constraintEnd_toStartOf="@+id/btnLimpar"
        app:layout_constraintStart_toEndOf="@+id/btnVoltarTF"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/btnVoltarTF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/voltar"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="#0D9185"
        app:fontFamily="@font/lastingsketch"
        app:iconTint="@color/AMARELO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/edtAviao"
        android:layout_width="228dp"
        android:layout_height="61dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="Digite o nome do objeto"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/edtBanana"
        android:layout_width="220dp"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="Digite o nome do objeto"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/edtAviao" />

    <EditText
        android:id="@+id/edtDado"
        android:layout_width="221dp"
        android:layout_height="63dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="Digite o nome do objeto"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/edtCama" />

</androidx.constraintlayout.widget.ConstraintLayout>